src/validation/snapshots/rusty__validation__variable__variable_validator_tests__validate_empty_enum_declaration.snap
---
source: src/validation/variable.rs
expression: diagnostics
---
error: Variable block is empty
  ┌─ <internal>:2:14
  │
2 │         TYPE my_enum : (); END_TYPE
  │              ^^^^^^^ Variable block is empty

error: Variable block is empty
  ┌─ <internal>:6:27
  │
6 │                 my_enum : ();
  │                           ^^ Variable block is empty


